<resources>
    <string name="app_name">TestkingTestSudokuApp</string>
    <string name="time">Yours:</string>
    <string name="startTime">00:00</string>

    <!-- Facebook -->
    <string name="facebook_app_id">261954774251382</string>

    <!-- MainActivityLayout -->
    <string name="login_but">Login</string>
    <string name="play_but">Play</string>
    <string name="hello_text">Добро пожаловать в TestSudokuApp</string>

    <!-- Keypad -->
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
</resources>
