<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.another1dd.testkingtestsudokuapp.GameActivity">

    <com.another1dd.testkingtestsudokuapp.view.SudokuGridView
        android:id="@+id/myGridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:horizontalSpacing="0dp"
        android:numColumns="9"
        android:padding="5dp"
        android:verticalSpacing="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/topbar"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nullbut1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:background="@android:color/transparent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:layout_weight="0.36"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/startTime"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="11sp" />
        </LinearLayout>

        <Button
            android:id="@+id/nullbut2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:background="@mipmap/ic_edit_but" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:background="@mipmap/ic_delete_but" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/keypad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@drawable/keypad"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/keypad_but_1"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/button1"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="22sp" />

            <Button
                android:id="@+id/keypad_but_2"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/button2"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="22sp" />

            <Button
                android:id="@+id/keypad_but_3"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/button3"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/keypad_but_4"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/button4"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="22sp" />

            <Button
                android:id="@+id/keypad_but_5"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/button5"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="22sp" />

            <Button
                android:id="@+id/keypad_but_6"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/button6"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/keypad_but_7"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/button7"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="22sp" />

            <Button
                android:id="@+id/keypad_but_8"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/button8"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="22sp" />

            <Button
                android:id="@+id/keypad_but_9"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/button9"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="22sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/footer"
        android:orientation="horizontal">

    </LinearLayout>


</LinearLayout>
